# SIT_CSC2003_ES_AY2022

./: README.md  Task1.1.c  Task2.2_Submission.c
lab05/: Lab05_Submission_FinalVer.c  Yi_Lin_Submission-Ver1.0.c
lab1/: sameRate.c  twoTimesRate.c
lab2/: Lab2_API.c  Task-2.c  Task3  Task3.c  Turn on an LED_Register.c  task1.c  task1_1.c  task2.c  task2_1.c  task2_2.c  task3.c
lab3/: task1.c  task2.2.c  task2.c
lab4/: Yi Lin's Copy_Lab4Submission.c  task2.2.c
project/: main.c
projects/ESP01HC05 via UART/: Pico-HC05_Receiving.c  Pico-HC05_Sending.c
projects/msp_uart_m5stick/: UART_Driver.c  UART_Driver.h  main.c  uart.m5f
projects/pico_uart_m5stick/: CMakeLists.txt  README.md  main.c  uart.m5f  ui_flow_comms_.m5f
